Adding a basic loading ui and set initial loadign to New York

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -20,6 +20,9 @@
 			</div>
 
 		</form>
+		<div class="loading" style="display:none">
+			<p>Loading...</p>
+		</div>
 		<div>
 			<table class="table" id="probTable">
 				<thead class="thead-inverse">
