--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -13,14 +13,14 @@
 <body>
 	<div class="container">
 		<h1 class="text-center">Will it Rain Today?</h1>
-		<form id="search-cities">
+		<form>
 			<div class="form-group">
-				<input class="form-control typeahead" type="text"
-					placeholder="Type a name of city to get rain prediction" />
+				<input class="form-control" type="text"
+					placeholder="Type a name of city to get rain prediction" id="search"/>
 			</div>
 
 		</form>
-		<div class="loading" style="display:none">
+		<div class="loading" style="visibility: visible;">
 			<p>Loading...</p>
 		</div>
 		<div>
