Removed bug to refresh rows on each new prediction

--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -20,7 +20,7 @@
 			</div>
 
 		</form>
-		<div class="loading" style="visibility: visible;">
+		<div class="loading" style="display: none">
 			<p>Loading...</p>
 		</div>
 		<div>
